--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <url>http://maven.apache.org</url>
 
   <properties>
+    <java.version>1.7</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -19,6 +20,12 @@
       <groupId>com.sun.mail</groupId>
       <artifactId>javax.mail</artifactId>
       <version>1.5.6</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.thymeleaf</groupId>
+      <artifactId>thymeleaf</artifactId>
+      <version>3.0.6.RELEASE</version>
     </dependency>
 
     <dependency>
